The example application works!

--- a/SampleApp/AirlineInfo/src/assets/styles/main.scss
+++ b/SampleApp/AirlineInfo/src/assets/styles/main.scss
@@ -21,8 +21,8 @@ $line-color: grey;
             cursor: pointer;
 
             transition: color $transition-speed;
-            &:hover {
-                color: aquamarine;
+            &.current, &:hover {
+                color: #00aaff;
             }
         }
     }
