--- a/SampleApp/AirlineInfo/src/assets/styles/main.scss
+++ b/SampleApp/AirlineInfo/src/assets/styles/main.scss
@@ -17,7 +17,7 @@ $line-color: grey;
     .airlines-list {
         font-size: 1.2em;
 
-        li {
+        .item {
             cursor: pointer;
 
             transition: color $transition-speed;
