--- a/SampleApp/GithubUserInfo/src/assets/styles/main.scss
+++ b/SampleApp/GithubUserInfo/src/assets/styles/main.scss
@@ -1,12 +1,13 @@
-$import-google-fonts: false;
-$icons-font-path: '../semantic-ui';
-$flags-image-path: '../semantic-ui';
+/* $import-google-fonts: false; */
+/* $icons-font-path: '/semantic-ui'; */
+/* $flags-image-path: '/semantic-ui'; */
 
-@import '~semantic-ui-sass/scss/globals/all';
-@import '~semantic-ui-sass/scss/elements/all';
-@import '~semantic-ui-sass/scss/collections/all';
-@import '~semantic-ui-sass/scss/views/all';
-@import '~semantic-ui-sass/scss/modules/all';
+/* @import '~semantic-ui-sass/scss/globals/all'; */
+/* @import '~semantic-ui-sass/scss/elements/all'; */
+/* @import '~semantic-ui-sass/scss/collections/all'; */
+/* @import '~semantic-ui-sass/scss/views/all'; */
+/* @import '~semantic-ui-sass/scss/modules/all'; */
+@import '~semantic-ui-css/semantic.min.css';
 
 $transition-speed: .1s;
 $line-color: grey;
