update webpack config

--- a/SampleApp/GithubUserInfo/src/assets/styles/main.scss
+++ b/SampleApp/GithubUserInfo/src/assets/styles/main.scss
@@ -1,6 +1,6 @@
 $import-google-fonts: false;
 $icons-font-path: 'assets/fonts';
-$flags-image-path: 'assets/images/';
+$flags-image-path: 'assets/images';
 
 @import '~semantic-ui-sass/scss/globals/all';
 @import '~semantic-ui-sass/scss/elements/all';
