--- a/SampleApp/GithubUserInfo/src/assets/styles/main.scss
+++ b/SampleApp/GithubUserInfo/src/assets/styles/main.scss
@@ -9,6 +9,7 @@ html, body {
     .ui.segments {
         .ui.segment {
             text-align: center;
+            padding: 50px 20px;
         }
     }
 }
